// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`colors renders correctly for a tag with color danger 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: #c9444d;
}

.c0 {
  display: inline-block;
  background-color: #c9444d;
  border-radius: 4px;
  color: #fff;
  fill: #fff;
  font-size: 0.8rem;
  font-weight: 600;
  padding: 0.2em 0.4em;
}

<div
  class="c0 c1"
/>
`;

exports[`colors renders correctly for a tag with color primary 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: #444bc9;
}

.c0 {
  display: inline-block;
  background-color: #444bc9;
  border-radius: 4px;
  color: #fff;
  fill: #fff;
  font-size: 0.8rem;
  font-weight: 600;
  padding: 0.2em 0.4em;
}

<div
  class="c0 c1"
/>
`;

exports[`colors renders correctly for a tag with color success 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: #2c8453;
}

.c0 {
  display: inline-block;
  background-color: #2c8453;
  border-radius: 4px;
  color: #fff;
  fill: #fff;
  font-size: 0.8rem;
  font-weight: 600;
  padding: 0.2em 0.4em;
}

<div
  class="c0 c1"
/>
`;

exports[`colors renders correctly for a tag with color warning 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: #f2a100;
}

.c0 {
  display: inline-block;
  background-color: #f2a100;
  border-radius: 4px;
  color: #000;
  fill: #000;
  font-size: 0.8rem;
  font-weight: 600;
  padding: 0.2em 0.4em;
}

<div
  class="c0 c1"
/>
`;

exports[`renders correctly 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: #435a6f;
}

.c0 {
  display: inline-block;
  background-color: #435a6f;
  border-radius: 4px;
  color: #fff;
  fill: #fff;
  font-size: 0.8rem;
  font-weight: 600;
  padding: 0.2em 0.4em;
}

<div
  class="c0 c1"
>
  Tag
</div>
`;

exports[`renders correctly for a list of tags 1`] = `
.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: #435a6f;
}

.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c2 {
  display: inline-block;
  background-color: #435a6f;
  border-radius: 4px;
  color: #fff;
  fill: #fff;
  font-size: 0.8rem;
  font-weight: 600;
  padding: 0.2em 0.4em;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.c0 > * {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

<div
  class="c0 c1"
  spacing="xxsmall"
>
  <div
    class="c2 c3"
  >
    Tag 1
  </div>
  <div
    class="c2 c3"
  >
    Tag 2
  </div>
  <div
    class="c2 c3"
  >
    Tag 3
  </div>
</div>
`;

exports[`renders correctly for an outlined tag 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: #435a6f;
}

.c0 {
  display: inline-block;
  background-color: #435a6f;
  border-radius: 4px;
  color: #fff;
  fill: #fff;
  font-size: 0.8rem;
  font-weight: 600;
  padding: 0.2em 0.4em;
}

.c0 {
  background-color: unset;
  border: 1px solid #435a6f;
  color: #435a6f;
  fill: #435a6f;
}

<div
  class="c0 c1"
  kind="outlined"
>
  Outlined tag
</div>
`;

exports[`sizes renders correctly for a tag with size large 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: #435a6f;
}

.c0 {
  display: inline-block;
  background-color: #435a6f;
  border-radius: 4px;
  color: #fff;
  fill: #fff;
  font-size: 0.8rem;
  font-weight: 600;
  padding: 0.2em 0.4em;
}

.c0 {
  font-size: 1.25em;
}

<div
  class="c0 c1"
  style="size: large;"
/>
`;

exports[`sizes renders correctly for a tag with size medium 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: #435a6f;
}

.c0 {
  display: inline-block;
  background-color: #435a6f;
  border-radius: 4px;
  color: #fff;
  fill: #fff;
  font-size: 0.8rem;
  font-weight: 600;
  padding: 0.2em 0.4em;
}

.c0 {
  font-size: 1em;
}

<div
  class="c0 c1"
  style="size: medium;"
/>
`;
